Fix wrapping tag margins

--- a/RecipeBookWeb/src/Content/site.scss
+++ b/RecipeBookWeb/src/Content/site.scss
@@ -189,6 +189,7 @@ div.tag-list {
 		border-radius: 4px;
 		margin-right: 2px;
 		background-color: #E0E0E0;
+		margin-bottom: 4px;
 	}
 }
 
